feat: implementing api documentation with Swagger